[gd_scene load_steps=4 format=3 uid="uid://cxc8c7c2kgbe0"]

[ext_resource type="Script" path="res://Game Components/Riddles/FinalBeeRiddleQ.gd" id="1_2dje8"]
[ext_resource type="FontFile" uid="uid://dnk30javuvt8g" path="res://Assets/Font/Sol Schori.ttf" id="2_0tnsf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5l3w"]
size = Vector2(128, 111)

[node name="FinalBeeRiddleQ" type="Area2D"]
script = ExtResource("1_2dje8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-13, 27.5)
shape = SubResource("RectangleShape2D_u5l3w")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -315.5
offset_top = -368.0
offset_right = 315.5
grow_horizontal = 2
grow_vertical = 0
color = Color(0.188235, 0.270588, 0.160784, 0.407843)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 216.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("2_0tnsf")
text = "Why are bees important?"

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 200.0
offset_right = 160.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("2_0tnsf")
text = "Honey"

[node name="Button2" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 250.0
offset_right = 160.0
offset_bottom = 290.0
theme_override_fonts/font = ExtResource("2_0tnsf")
text = "Hard workers"

[node name="Button3" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 300.0
offset_right = 160.0
offset_bottom = 340.0
theme_override_fonts/font = ExtResource("2_0tnsf")
text = "Pollinators"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/Button3" to="." method="_on_button_3_pressed"]
